--- a/client/src/components/company_components/styles/contacts.css
+++ b/client/src/components/company_components/styles/contacts.css
@@ -1,11 +1,11 @@
 .contacts {
-       display: flex;
+display: flex;
     justify-content: space-between;
     align-items: center;
     border-radius: 5px;
     margin: 0;
     color: white;
-    background: #1154a1;
+    background: #3f51b5;
 }
 
 .contacts-container span {
@@ -14,7 +14,7 @@
   padding: 2px;
 }
 .contacts span a {
-  color: whitesmoke;
+  /* color: whitesmoke; */
   font-size: 10px;
 }
 .phone-icon {
@@ -26,13 +26,11 @@
 
 }
 .contacts-icon {
-  font-size: 3rem;
-  cursor: pointer;
-  margin: 3px;
-  border-radius: 4px;
-  transition: background ease-in-out 0.5s;
-  /* background-color: rgb(7, 42, 243); */
-  border: 1px white solid;
+    cursor: pointer;
+    margin: 3px;
+    border-radius: 4px;
+    transition: background ease-in-out 0.5s;
+    border: 1px #7a82ab solid;
 }
 .contacts-icon:hover {
   background-color: rgb(53, 84, 255);
