--- a/client/src/components/company_components/styles/slider.css
+++ b/client/src/components/company_components/styles/slider.css
@@ -1,11 +1,11 @@
 .photo-slider {
-  border: 1px #c5cecf solid;
-  margin: 5px;
-  border-radius: 10px;
-  padding: 0;
-  height: 55vh;
-  flex-grow: 1;
-  position: relative;
+border: 1px #c5cecf solid;
+    margin: 5px;
+    border-radius: 10px;
+    padding: 0;
+    height: 400px;
+    flex-grow: 1;
+    position: relative;
 }
 .slides-container {
   display: flex;
@@ -13,21 +13,22 @@
   padding: 0;
   flex-grow: 1;
   border-radius: 10px;
+  height: 100%;
 }
 .photo-slider .slide {
   transition: all ease-in-out 1s;
   margin: 5px 0;
-  height: 54vh;
+  height: 100%;
 }
 
 .photo-slider .controls {
-  padding: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-radius: 14px;
-  position: absolute;
-  top: 150px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 14px;
+    position: absolute;
+    top: 150px;
 }
 .photo-slider .controls .toTheRight,
 .photo-slider .controls .totheLeft,
