--- a/client/src/components/jobs/styles/latestJobs.css
+++ b/client/src/components/jobs/styles/latestJobs.css
@@ -1,6 +1,6 @@
 .latest-jobs {
      display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
+    /* grid-template-columns: repeat(auto-fit, minmax(330px, 1fr)); */
     grid-gap: 10px;
     gap: 10px;
     position: relative;
